<!--отображение основных кнопок снизу и взаимодействие с ними-->
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/Menu"
        android:title="@string/menu"
        android:icon="@drawable/baseline_menu_24"
        />

    <item
        android:id="@+id/Home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/Cart"
        android:icon="@drawable/baseline_shopping_basket_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/History"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history" />

    <item
        android:id="@+id/Profile"
        android:title="@string/user"
        android:icon="@drawable/baseline_person_2_24" />
</menu>
