<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:id="@id/Progressdialog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:elevation="1.0dip"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80.0dip"
            android:layout_height="80.0dip"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@id/imageViewAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="115.0dip"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30.0dip"
            android:layout_marginBottom="20.0dip"
            android:padding="10.0dip"
            android:src="@drawable/login" />

        <EditText
            android:id="@id/etxtUserName"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="5.0dip"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="20.0dip"
            android:ems="10"
            android:hint="@string/login"
            android:inputType="text"
            android:padding="10.0dip" />
        <Button
            android:id="@id/btnSendCode"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendCode" />

        <EditText
            android:id="@id/etxtCode"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="5.0dip"
            android:drawableLeft="@drawable/baseline_qr_code_scanner_24"
            android:drawablePadding="20.0dip"
            android:ems="10"
            android:hint="@string/code"
            android:padding="10.0dip" android:visibility="invisible" />

        <EditText
            android:id="@id/etxtPassword"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="5.0dip"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20.0dip"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="10.0dip" android:visibility="invisible"  />

        <EditText
            android:id="@id/etxtPassword2"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="5.0dip"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="20.0dip"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10.0dip" android:visibility="invisible"  />

        <Button
            android:id="@id/btnChangePwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip"
            android:text="@string/change" android:visibility="invisible"  />
    </LinearLayout>
</FrameLayout>