<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.RegisterFragment">

    <RelativeLayout
        android:id="@+id/Progressdialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:src="@drawable/login" />
        <!--        <TextView-->
        <!--            android:id="@+id/textView10"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="50dp"-->
        <!--            android:gravity="center_horizontal"-->
        <!--            android:text="Вход"-->
        <!--            android:textSize="32dp"-->
        <!--            android:textStyle="bold" android:layout_marginBottom="20dp" />-->

        <EditText
            android:id="@+id/etxtUserName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/login"
            android:inputType="text" />

        <EditText
            android:id="@+id/etxtPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_phone_android_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/phoneNumber"
            android:inputType="number" />

        <EditText
            android:id="@+id/etxtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/e_mail"
            android:drawableLeft="@drawable/baseline_email_24"
            android:inputType="textEmailAddress"
            android:drawablePadding="20dp" />

        <EditText
            android:id="@+id/etxtAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:ems="10"
            android:padding="10dp"
            android:drawableLeft="@drawable/baseline_location_on_24"
            android:hint="@string/delivery_address"
            android:drawablePadding="20dp"
            android:inputType="text" />

        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/etxtPassword2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Register2" />


    </LinearLayout>

</FrameLayout>