<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <RelativeLayout
        android:id="@+id/login_fragment_Progressdialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="115dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:src="@drawable/login" />


        <EditText
            android:id="@+id/etxtPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/login" />


        <EditText
            android:id="@+id/etxtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:drawableLeft="@drawable/baseline_password_24"
            android:drawablePadding="20dp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/Enter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/Register2" />

            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnLogin"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:gravity="right"
                android:padding="10dp"
                android:text="@string/ForgotPassword" />
        </LinearLayout>
    </LinearLayout>


</FrameLayout>
